@@ -122,7 +122,7 @@ class Wizard(object):
 
     def end(self):
         try:
-            RPCExecute('wizard', self.action, 'delete', self.session_id,
+            return RPCExecute('wizard', self.action, 'delete', self.session_id,
                 process_exception=False)
             if self.action == 'ir.module.module.config_wizard':
                 rpc.context_reload()
@@ -330,7 +330,7 @@ class WizardDialog(Wizard, NoModal):
         self.dia.show()
         common.center_window(self.dia, self.parent, self.sensible_widget)
 
-    def destroy(self):
+    def destroy(self, action=None):
         super(WizardDialog, self).destroy()
         self.dia.destroy()
         NoModal.destroy(self)
@@ -353,10 +353,12 @@ class WizardDialog(Wizard, NoModal):
                 # Wizard run from a children record so reload parent record
                 ids = [dialog.screen.current_record.id]
             dialog.screen.reload(ids, written=True)
+            if action:
+                dialog.screen.client_action(action)
 
     def end(self):
-        super(WizardDialog, self).end()
-        self.destroy()
+        action = super(WizardDialog, self).end()
+        self.destroy(action=action)
 
     def close(self, widget, event=None):
         if self.end_state in self.states:
