@@ -1,3 +1,4 @@
+* Manage client actions from button and wizard
 * Add tree_invisible attribute to button in tree view
 * Add buttons of the view in actions menu
 * Don't evaluate anymore relate action with the record
